@@ -92,7 +92,7 @@ typedef struct
 	NMClient *nm_client;
 	NMVPNManager *vpn_manager;
 	NMAccessPoint *current_ap;
-	gulong wireless_strength_monitor;
+	gulong strength_id;
 	GHashTable *vpn_connections;
 
 	NMSettings * settings;
